--- a/weather_station/src/weather_station/CMakeLists.txt
+++ b/weather_station/src/weather_station/CMakeLists.txt
@@ -51,10 +51,10 @@ add_message_files(
 )
 
 ## Generate services in the 'srv' folder
-add_service_files(
- FILES
- local_weather.srv
-)
+# add_service_files(
+#  FILES
+#  local_weather.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
